--- a/src/adservice/Jenkinsfile
+++ b/src/adservice/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
             steps {
                 script {
                     withDockerRegistry(credentialsId: 'docker-cred', toolName: 'docker') {
-                        sh "docker build -t harishnshetty/adservice:latest ."
+                        sh "docker build -t elsonpulikkan/adservice:latest ."
                     }
                 }
             }
@@ -16,7 +16,7 @@ pipeline {
             steps {
                 script {
                     withDockerRegistry(credentialsId: 'docker-cred', toolName: 'docker') {
-                        sh "docker push harishnshetty/adservice:latest "
+                        sh "docker push elsonpulikkan/adservice:latest "
                     }
                 }
             }
